<resources>
    <string name="app_name">WellBeing</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="signup">Sign Up</string>
    <string name="email">e-mail</string>
    <string name="confirm_password">confirm password</string>
    <string name="redirectToLogin"><u>Already signed up?</u></string>
    <string name="redirectToSignUp"><u>Don\'t have an account yet?</u></string>
    <string name="background">Background</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="save_answer">SAVE ANSWER</string>
    <string name="either_disagree_nor_agree">EITHER DISAGREE NOR AGREE</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
</resources>