<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutIcons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestion">

        <ImageView
            android:id="@+id/iconDisagree"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/disagree"
            android:src="@drawable/ic_disagree"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iconNeutral"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <ImageView
            android:id="@+id/iconNeutral"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/either_disagree_nor_agree"
            android:src="@drawable/ic_neutral"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconDisagree"
            app:layout_constraintEnd_toStartOf="@id/iconAgree" />

        <ImageView
            android:id="@+id/iconAgree"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/agree"
            android:src="@drawable/ic_agree"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconNeutral"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/layoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutIcons">

        <TextView
            android:id="@+id/descriptionDisagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disagree" />

        <TextView
            android:id="@+id/descriptionNeutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/either_disagree_nor_agree" />

        <TextView
            android:id="@+id/descriptionAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agree" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
